--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="flex-start hidden" data-flex-start-div>
+        <div class="flex-start-box"></div>
+        <div class="flex-start-box"></div>
+        <div class="flex-start-box"></div>
+    </div>
+    <h1 class="flex-start-mode" data-flex-start>Justify Content Flex Start</h1>
     <script src="script/index.js"></script>
 </body>
 </html>
